Updating rtl-sdr content

--- a/themes/kiera/static/css/styles.css
+++ b/themes/kiera/static/css/styles.css
@@ -140,7 +140,7 @@ body {
   overflow-x: auto;
   padding: 0.8em;
   font-size: 0.9em;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
+  /* box-shadow: 0 -1px 0 #bbbbbb inset; */
 }
 
 #container main article pre code {
@@ -166,7 +166,7 @@ body {
   border-color: #cccccc #cccccc #bbbbbb;
   border-image: none;
   border-radius: 3px;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
+  /* box-shadow: 0 -1px 0 #bbbbbb inset; */
 }
 
 #container main h1 {
@@ -229,12 +229,12 @@ a {
 
 .image, figure img, img {
   width: 100%;
-  box-shadow: 0 3px 3px #bbbbbb;
+  /* box-shadow: 0 0 0 #bbbbbb; */
 }
 
 .full-image, figure.full img, img[src*="full"] {
   width: 100%;
-  box-shadow: 0 3px 3px #bbbbbb;
+  /* box-shadow: 0 0 0 #bbbbbb; */
 }
 
 @supports (width: 100vw) {
@@ -250,7 +250,7 @@ a {
 
 .mid-image, figure.mid img, img[src*="mid"] {
   width: 100%;
-  box-shadow: 0 3px 3px #bbbbbb;
+  /* box-shadow: 0 3px 3px #bbbbbb; */
 }
 
 @supports (width: 100vw) {
@@ -276,7 +276,7 @@ a {
   width: 300px;
   float: left;
   margin: 0 1em 1em -3em;
-  box-shadow: 0 3px 3px #bbbbbb;
+  /* box-shadow: 0 0px 0px #bbbbbb; */
 }
 
 @media only screen and (max-width: 800px) {
@@ -291,7 +291,7 @@ a {
   width: 300px;
   float: right;
   margin: 0 -3em 1em 1em;
-  box-shadow: 0 3px 3px #bbbbbb;
+  /* box-shadow: 0 0px 0px #bbbbbb; */
 }
 
 @media only screen and (max-width: 800px) {
@@ -349,7 +349,7 @@ blockquote {
   padding: 0.5em 2em;
   position: relative;
   background-color: #efefef;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
+  /* box-shadow: 0 -1px 0 #bbbbbb inset; */
 }
 
 blockquote::before {
